tests/parsing/smtlib/v2.6/errors/156_s_expr_list_bad_s_expr_1.smt2
(set-option :foo (bar _))
